<resources>
    <string name="app_name">About Me</string>
    <string name="carlo_tran">Carlo Tran</string>
    <string name="star">star</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis convallis convallis tellus id interdum velit laoreet. Fames ac turpis egestas maecenas pharetra convallis posuere. Accumsan tortor posuere ac ut. Sed velit dignissim sodales ut eu sem. Enim ut tellus elementum sagittis. Odio pellentesque diam volutpat commodo sed. Suscipit adipiscing bibendum est ultricies integer. Viverra nam libero justo laoreet sit amet cursus. Enim nulla aliquet porttitor lacus luctus accumsan tortor. Ornare massa eget egestas purus viverra accumsan in. Eget dolor morbi non arcu risus. Dui accumsan sit amet nulla facilisi morbi tempus. At varius vel pharetra vel turpis nunc eget lorem dolor. Augue neque gravida in fermentum. Posuere ac ut consequat semper viverra nam libero justo laoreet. Ultrices eros in cursus turpis massa. Sed blandit libero volutpat sed cras ornare. Mi sit amet mauris commodo quis imperdiet massa tincidunt nunc. Est velit egestas dui id ornare arcu odio ut sem. Turpis massa sed elementum tempus egestas sed sed. Bibendum arcu vitae elementum curabitur. Quisque egestas diam in arcu cursus euismod quis viverra nibh. Diam in arcu cursus euismod quis viverra. Et malesuada fames ac turpis. Morbi tincidunt ornare massa eget egestas purus viverra. Purus in mollis nunc sed. Ut ornare lectus sit amet est placerat in egestas. Purus faucibus ornare suspendisse sed nisi. Pretium nibh ipsum consequat nisl. Blandit libero volutpat sed cras ornare arcu. Dui sapien eget mi proin sed. Natoque penatibus et magnis dis parturient montes nascetur. Nunc eget lorem dolor sed viverra ipsum nunc. Cursus turpis massa tincidunt dui ut ornare lectus sit. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Sit amet consectetur adipiscing elit pellentesque habitant morbi. Urna neque viverra justo nec ultrices dui sapien eget mi. Sociis natoque penatibus et magnis dis parturient. Imperdiet massa tincidunt nunc pulvinar sapien et. Sit amet risus nullam eget felis eget nunc lobortis. A arcu cursus vitae congue mauris. Non nisi est sit amet. Mauris rhoncus aenean vel elit scelerisque. At auctor urna nunc id cursus metus aliquam. Nibh tortor id aliquet lectus proin. Sem viverra aliquet eget sit amet tellus cras. Id diam maecenas ultricies mi eget. Eu volutpat odio facilisis mauris sit amet. Lacus luctus accumsan tortor posuere. Elementum tempus egestas sed sed risus pretium quam. Mi eget mauris pharetra et ultrices neque. Dictum sit amet justo donec enim diam vulputate. Vestibulum sed arcu non odio euismod lacinia at quis risus. Odio ut enim blandit volutpat maecenas volutpat. Nisl rhoncus mattis rhoncus urna neque viverra justo nec. Blandit turpis cursus in hac habitasse. Ut eu sem integer vitae justo. Diam maecenas ultricies mi eget mauris pharetra. Scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt. Vulputate mi sit amet mauris commodo quis. Eu ultrices vitae auctor eu augue ut lectus arcu. Suspendisse faucibus interdum posuere lorem ipsum dolor. Iaculis eu non diam phasellus vestibulum lorem sed risus. Urna cursus eget nunc scelerisque viverra mauris. Tristique nulla aliquet enim tortor. Mattis vulputate enim nulla aliquet porttitor. Elit ut aliquam purus sit amet luctus venenatis lectus magna. Lacus laoreet non curabitur gravida. Ut morbi tincidunt augue interdum velit. Mollis nunc sed id semper. Arcu dui vivamus arcu felis bibendum. Tristique risus nec feugiat in fermentum posuere. Eget aliquet nibh praesent tristique. Viverra mauris in aliquam sem fringilla. Quis vel eros donec ac odio tempor. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Id cursus metus aliquam eleifend mi in nulla. Urna id volutpat lacus laoreet non curabitur. Cras sed felis eget velit aliquet sagittis id consectetur. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Iaculis eu non diam phasellus vestibulum lorem. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tristique risus nec feugiat in. Habitasse platea dictumst quisque sagittis. Velit sed ullamcorper morbi tincidunt ornare massa. Ligula ullamcorper malesuada proin libero nunc consequat. In pellentesque massa placerat duis. Eros donec ac odio tempor. Convallis tellus id interdum velit laoreet id donec ultrices tincidunt. Bibendum est ultricies integer quis auctor elit sed vulputate mi. Diam maecenas sed enim ut sem viverra. Egestas quis ipsum suspendisse ultrices gravida dictum fusce ut placerat. Cras fermentum odio eu feugiat pretium nibh ipsum. Mattis nunc sed blandit libero volutpat sed cras ornare. Etiam non quam lacus suspendisse faucibus. Sed arcu non odio euismod. Nulla pharetra diam sit amet nisl suscipit adipiscing. Id diam vel quam elementum pulvinar etiam. Massa sed elementum tempus egestas sed sed risus pretium. Senectus et netus et malesuada fames ac turpis egestas sed. Semper feugiat nibh sed pulvinar. Semper auctor neque vitae tempus quam pellentesque. Morbi blandit cursus risus at ultrices. Mi quis hendrerit dolor magna eget est lorem ipsum. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Posuere ac ut consequat semper viverra nam libero justo laoreet. Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. Felis imperdiet proin fermentum leo. Pharetra vel turpis nunc eget lorem dolor sed. Sit amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus. Pellentesque massa placerat duis ultricies lacus sed turpis. Ultrices dui sapien eget mi proin. Condimentum lacinia quis vel eros donec ac odio tempor. Ipsum dolor sit amet consectetur. Lacus vestibulum sed arcu non odio euismod lacinia at. Eget mi proin sed libero enim sed. Tincidunt augue interdum velit euismod in pellentesque. Fames ac turpis egestas sed tempus urna et pharetra. Turpis egestas sed tempus urna. Vel eros donec ac odio tempor orci dapibus ultrices. Urna nunc id cursus metus aliquam. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae. Urna nec tincidunt praesent semper. Montes nascetur ridiculus mus mauris. Ornare lectus sit amet est placerat in egestas. Viverra aliquet eget sit amet. Ipsum suspendisse ultrices gravida dictum. Ac tincidunt vitae semper quis lectus nulla at volutpat diam. Morbi blandit cursus risus at ultrices mi. Sodales ut etiam sit amet nisl purus in. Varius quam quisque id diam vel quam elementum pulvinar etiam. Pellentesque adipiscing commodo elit at imperdiet dui. Odio tempor orci dapibus ultrices in iaculis nunc sed. Risus ultricies tristique nulla aliquet enim. Lorem ipsum dolor sit amet. Sit amet risus nullam eget felis eget nunc. Eget est lorem ipsum dolor sit amet consectetur. Vitae tempus quam pellentesque nec nam. Vel facilisis volutpat est velit egestas dui id.</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="done">DONE</string>
</resources>