<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carlo_tran"
        android:textAlignment="center"
        style="@style/NameStyle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/nickname_edit"
        android:hint="@string/enter_your_nickname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        style="@style/NameStyle"/>

    <Button
        android:id="@+id/done_button"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nickname_text"
        android:visibility="gone"
        style="@style/NameStyle"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/star"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/bio_scroll"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/lorem_ipsum"
            android:paddingHorizontal="8dp"
            style = "@style/NameStyle"
            android:lineSpacingMultiplier="1.5"/>
    </ScrollView>

</LinearLayout>